// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userRolesRepository read operations getProjectUsers returns expected snapshot 1`] = `
Array [
  Object {
    "instanceAdmin": false,
    "projectRoles": Array [
      Object {
        "projectName": "project 1",
        "role": "admin",
      },
      Object {
        "projectName": "project 2",
        "role": "user",
      },
    ],
    "toObject": [Function],
    "userId": "uid1",
  },
  Object {
    "instanceAdmin": true,
    "projectRoles": Array [
      Object {
        "projectName": "project 2",
        "role": "viewer",
      },
    ],
    "toObject": [Function],
    "userId": "uid2",
  },
]
`;

exports[`userRolesRepository read operations getRoles returns expected snapshot 1`] = `
Object {
  "instanceAdmin": false,
  "projectRoles": Array [
    Object {
      "projectName": "project 1",
      "role": "admin",
    },
    Object {
      "projectName": "project 2",
      "role": "user",
    },
  ],
  "userId": "uid1",
}
`;
